my first commit

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
     
     <div class="w3-col l6 w3-padding-large">
         <br><video width="580" controls>
-            <source src="ski.mp4" type="video/mp4">
+            <source src="Ski.mp4" type="video/mp4">
             Your browser does not support HTML video.
           </video>
     </div> 
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
       <h3 class="w3-center">WHERE I WORK</h3>
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
-          <img src="SUN.jpg" class="w3-image w3-round" style="width:100%">
+          <img src="sun.jpg" class="w3-image w3-round" style="width:100%">
       </div>
         <div class="w3-col m8 w3-panel">
           <div class="w3-large w3-margin-bottom">
